Fix width issue on book covers

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -150,7 +150,6 @@
 	}
 
 	.book-img img.cover {
-		width: 267px;
 		margin: 0 auto;
 		height: 383px;
 	}
